Exam_Preparation_Kittens_Done_Pending_Fix_For_Jpg_Folder

--- a/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Users/Login.html
+++ b/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Users/Login.html
@@ -1,6 +1,4 @@
-﻿<body>
-    {{{error}}}
-    <div class="container-fluid">
+﻿    <div class="container-fluid">
         <hr class="my-2" />
         <div class="legend text-center">
             <h2>Login</h2>
@@ -38,4 +36,3 @@
         </div>
         <hr class="my-5" />
     </div>
-</body>
