--- a/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Layout.html
+++ b/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Layout.html
@@ -19,29 +19,23 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end row" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active col-md-4">
-                            <a class="nav-link" href="/home/index">Home</a>
-                        </li>
-                        <li class="nav-item active col-md-4" style="display:{{{anonymousDisplay}}}">
-                            <a class="nav-link" href="/users/login">Login</a>
-                        </li>
-                        <li class="nav-item active col-md-4" style="display:{{{anonymousDisplay}}}">
-                            <a class="nav-link" href="/users/register">Register</a>
-                        </li>
-                        <li class="nav-item active col-md-4" style="display:{{{userDisplay}}}">
-                            <a class="nav-link" href="/users/allkittens">All Kittens</a>
-                        </li>
-                        <li class="nav-item active col-md-4" style="display:{{{userDisplay}}}">
-                            <a class="nav-link" href="/users/addkitten">Add Kitten</a>
-                        </li>
-                        <li class="nav-item active col-md-4" style="display:{{{userDisplay}}}">
-                            <a class="nav-link" href="/users/logout">Logout</a>
-                        </li>
+                        {{{navbar}}}
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+
+    <div class="row" style="display:{{{show-error}}}">
+        <div class="col-6 ml-auto mr-auto text-center">
+            <div class="alert alert-danger" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                {{{errorMessage}}}
+            </div>
+        </div>
+    </div>
 
             {{{content}}}
 
