--- a/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Users/Register.html
+++ b/C#Web/1.Basics/11.ExamPrep_I/MVCServer/SimpleMvc.App/Views/Users/Register.html
@@ -1,6 +1,4 @@
-﻿<body>
-    {{{error}}}
-    <div class="container-fluid">
+﻿    <div class="container-fluid">
         <hr class="my-2" />
         <div class="legend text-center">
             <h2>Register</h2>
@@ -53,4 +51,3 @@
         </div>
         <hr class="my-5" />
     </div>
-</body>
