--- a/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Orders/All.html
+++ b/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Orders/All.html
@@ -1,8 +1,8 @@
 ﻿<main>
     <h1 class="text-center">All Orders</h1>
     <hr class=" hr-1 bg-dark" />
-    <div>
-        <table class="table" width="50">
+    <div class="container">
+        <table class="table">
             <thead>
                 <tr>
                     <th>#</th>
