--- a/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Products/Edit.html
+++ b/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Products/Edit.html
@@ -24,7 +24,7 @@
         <hr class=" hr-1 bg-dark" />
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn chushka-bg-color">Edit</button>
-            <a class="btn chushka-bg-color" style="margin-left: 8%" href="/home/index">Cancel</a>
+            <a class="btn chushka-bg-color" style="margin-left: 8%" href="/products/details?id={{{id}}}">Cancel</a>
         </div>
     </form>
 </main>
