--- a/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Products/Delete.html
+++ b/C#Web/1.Basics/15.MyExam/Chushka_Exam/SoftUni.WebServer.App/Views/Products/Delete.html
@@ -14,7 +14,7 @@
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea class="form-control" id="description" placeholder="Description..." value="{{{description}}}" name="Description" disabled></textarea>
+            <textarea class="form-control" id="description" placeholder="Description..." name="Description" disabled>{{{description}}}</textarea>
         </div>
         <h1 class="text-center">Product Type</h1>
         <hr class=" hr-1 bg-dark" />
@@ -24,7 +24,7 @@
         <hr class=" hr-1 bg-dark" />
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn chushka-bg-color">Delete</button>
-            <a class="btn chushka-bg-color" style="margin-left: 8%" href="/home/index">Cancel</a>
+            <a class="btn chushka-bg-color" style="margin-left: 8%" href="/products/details?id={{{id}}}">Cancel</a>
         </div>
     </form>
 </main>
